--- a/custom_style.css
+++ b/custom_style.css
@@ -63,6 +63,6 @@ section[data-testid="stSidebar"] button:hover {
 }
 
 /* Reduzir tamanho da fonte da sidebar em 75% */
-[data-testid="stSidebar"] * {
+[data-testid="stSidebar"] {
     font-size: 75% !important;
 }
